kubernetes/components/postgresql/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${APP}-egress-databases
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: ${APP}-db
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: ${APP}-db
